--- a/README.Rmd
+++ b/README.Rmd
@@ -38,7 +38,11 @@ After lunch there is one hour planned with some specific presentations (13:15 - 
 
 - 13:55 R tools for Biodiversity Informatics, Markus Skyttner, Swedish Museum of Natural History
 
-## The course on the 24th and 25th
+## Audience
+
+Around 50-60 people are registered to attend the symposium. This includes people from the Government Offices of Sweden - Digitization, Swedish Department of Culture, Swedish Environmental Protection Agency, The Government's Purchasing Services at the Chamber of Commerce, Swedish University of Agricultural Science, Swedish Meteorological and Hydrological Institute, Swedish Sea and Water Authorities, Swedish National Archive, The Royal Swedish Library etc. Also non-Swedish representatives from C.S.I.R.O., Australia and from National Biodiversity Network, UK and from Agriculture and Agri-Food Canada, Royal Botanic Gardens Kew etc. Various educational sector representatives will attend from Stockholm University, Swedish Museum of Natural History, Södertörns Högskola, Swedish Royal Institute of Technology, Swedish University Library, Karolinska Institute etc. Also companies will be represented, such as Wikimedia Sweden, ImCode Partner AB, ArkivIT, Vascaia AB, Swedish Koha user group, Kami Development AB, Sälgö Consulting AB, Altrusoft etc
+
+# The course on the 24th and 25th
 
 This two day course is announced here:
 
@@ -47,6 +51,10 @@ http://www.nrm.se/english/researchandcollections/courseopensourcetoolsforbiodive
 The schedule is described here:
 
 http://blog.dina-web.net/os-2017/course.html#schedule
+
+The materials for this two day workshop / course can be found here:
+
+https://github.com/Open-Science-Nordics/workshop-materials
 
 ### Presenters
 
@@ -60,8 +68,6 @@ Presentations are primarily by:
 
 ### Topics to be presented
 
-Topics include:
-
 - R for scientific computation and biodiversity analysis
 - rOpenSci and R packages for biodiversity analysis
 - Ignorance scores for primary biodiversity data
@@ -72,11 +78,11 @@ Topics include:
 	- some use case examples
 - speciesgeocodeR and sampbias R packages
 
-### Exercises 
+Please put any materials relating to demonstrations and exercises here:
 
-TODO: add more details about exercises and demonstrations here
+https://github.com/Open-Science-Nordics/workshop-materials
 
-# Resources
+# Resources / Links
 
 - ROpenSci - "Fostering open science and open data with R" at https://ropensci.github.io/ambassador-packet/slides/#ropensci
 - Nordic Open Science materials from Finland at http://openscience.fi/initiatives
